--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^5.3.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-vue-3": "^0.5.1",
